Junit 4 and 5 tests completely working.

--- a/junit5-demo-gradle/a011-solo-gradle/build.gradle
+++ b/junit5-demo-gradle/a011-solo-gradle/build.gradle
@@ -15,5 +15,15 @@ dependencies {
 }
 
 test {
+	// Use JUnit5 Gradle plug-in
 	useJUnitPlatform()
+	
+	// Prints test summary in console.
+	testLogging {
+	    afterSuite { desc, result ->
+	      if (!desc.parent) { // will match the outermost suite
+	        println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+	      }
+	    }
+	}
 }
