--- a/junit5-demo-maven/a020-junit4-and-5-maven/pom.xml
+++ b/junit5-demo-maven/a020-junit4-and-5-maven/pom.xml
@@ -17,6 +17,9 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
 		<junit.jupiter.version>5.4.0</junit.jupiter.version>
+		<!-- Need a version for the JUnit 4 API and engine -->
+		<junit.version>4.12</junit.version>
+		<junit.vintage.version>5.4.0</junit.vintage.version>
 	</properties>
 
 	<build>
@@ -38,6 +41,26 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<version>${junit.jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Add in JUnit 4 -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>${junit.vintage.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
