--- a/junit5-demo-maven/pom.xml
+++ b/junit5-demo-maven/pom.xml
@@ -15,5 +15,6 @@
 
 	<modules>
 		<module>a010-solo-maven</module>
+		<module>b010-display-names-and-nesting-maven</module>
 	</modules>
 </project>
