--- a/junit5-demo-maven/pom.xml
+++ b/junit5-demo-maven/pom.xml
@@ -16,5 +16,6 @@
 	<modules>
 		<module>a010-solo-maven</module>
 		<module>b010-display-names-and-nesting-maven</module>
+		<module>b040-tagging-and-filtering-maven</module>
 	</modules>
 </project>
