Error handling complete.

--- a/junit5-demo-maven/pom.xml
+++ b/junit5-demo-maven/pom.xml
@@ -18,5 +18,6 @@
 		<module>b010-display-names-and-nesting-maven</module>
 		<module>b040-tagging-and-filtering-maven</module>
 		<module>b050-ordering-maven</module>
+		<module>b060-exception-handling-maven</module>
 	</modules>
 </project>
