Parameterized tests finished.

--- a/junit5-demo-maven/pom.xml
+++ b/junit5-demo-maven/pom.xml
@@ -22,5 +22,6 @@
 		<module>b070-lambdas-maven</module>
 		<module>b080-dependency-injection-maven</module>
 		<module>b090-repeated-tests-maven</module>
+		<module>b100-parameterized-tests-maven</module>
 	</modules>
 </project>
