--- a/junit5-demo-maven/a020-junit4-and-5-maven/pom.xml
+++ b/junit5-demo-maven/a020-junit4-and-5-maven/pom.xml
@@ -39,7 +39,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
+			<artifactId>junit-jupiter-api</artifactId>
 			<version>${junit.jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
